@@ -39,6 +39,7 @@
 - Remove fleet admin from setup script {pull}18611[18611]
 - Correctly report platform and family. {issue}18665[18665]
 - Clean action store after enrolling to new configuration {pull}18656[18656]
+ [Ingest Manager] Avoid watching monitor logs {pull}18723[18723]
 
 ==== New features
 
